--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
     "framer-motion": "^12.19.2",
@@ -19,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
     "react-simple-typewriter": "^5.0.1",
+    "sweetalert2": "^11.22.1",
     "swiper": "^11.2.9",
     "tailwindcss": "^4.1.11"
   },
